Nuget paketleri kuruldu. Class'lar oluşturuldu.

--- a/Presentation/Api/appsettings.json
+++ b/Presentation/Api/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MicrosoftSqlServer": "Server=sql.bsite.net\\MSSQL2016;Database=ecommerceproject_db2;User ID=ecommerceproject_db2;Password=Ecommerce.78645;Trusted_Connection=False;TrustServerCertificate=True"
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "64A63153-11C1-4919-9133-EFAF99A9B456",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:7126",
+    "ValidateAudience": true,
+    "ValidAudience": "https://localhost:7126",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
+  }
 }
