SQLITE_LOCAL_DATABASE

--- a/Presentation/Api/appsettings.json
+++ b/Presentation/Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MicrosoftSqlServer": "Server=sql.bsite.net\\MSSQL2016;Database=ecommerceproject_db2;User ID=ecommerceproject_db2;Password=Ecommerce.78645;Trusted_Connection=False;TrustServerCertificate=True"
+    "MicrosoftSqlServer": "Server=localhost;Database=db1;User ID=sa;Password=P455WorD;Trusted_Connection=False;TrustServerCertificate=True",
+    "SqliteDatabase": "Data Source=LocalDatabase.db"
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigningKey": true,
